[package]
name = "dexter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }  # Enable both `v4` and `serde`
ordered-float = "4.2.2"
